--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,12 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.html linguist-detectable=false
-*.tex linguist-detectable=false
+*.css linguist-detectable=false
+*.java linguist-detectable=false
+*.python linguist-detectable=true 
+*.js linguist-detectable=false
+*.html linguist-detectable=false  
+*.xml linguist-detectable=false 
+
+
+tex/* linguist-vendored
+*.toc linguist-vendored
